--- a/content.css
+++ b/content.css
@@ -6,28 +6,39 @@
 }
 
 /* full page navigation */
-#imageExtractUI {
+#imageExtractUIContainer {
   width: 100%;
   background-color: lightyellow;
   margin: 0;
   padding: 0;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: center;
+  position: relative;
+}
+
+/* each toggle + label container */
+.imageExtractUI {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
   position: relative;
 }
 
 /* align under the toggle button */
-#imageExtractToggleLabel {
+.imageExtractLabel {
   text-align: center;
   font-family: sans-serif;
   font-size: 14px;
   color: black;
   margin: auto;
-  padding: 0 10px;
+  padding: 10px;
+  padding-left: 2px;
   position: relative;
 }
 
-#imageExtractToggle {
+.imageExtractCheckbox {
   text-align: center;
   margin: auto;
   padding: 0;
