--- a/content.css
+++ b/content.css
@@ -14,6 +14,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  flex-wrap: wrap;
   position: relative;
 }
 
@@ -43,4 +44,8 @@
   margin: auto;
   padding: 0;
   position: relative;
+}
+
+.hideImage {
+  display: none;
 }
