--- a/content.css
+++ b/content.css
@@ -25,6 +25,11 @@
   display: flex;
   flex-direction: row;
   position: relative;
+  padding-left: 5px
+}
+
+.imageExtractUI:nth-child(odd) {
+  background-color: #0000000f;
 }
 
 /* align under the toggle button */
@@ -37,6 +42,7 @@
   padding: 10px;
   padding-left: 2px;
   position: relative;
+  padding-right: 5px
 }
 
 .imageExtractCheckbox {
