Add notice on android about shortcuts not being supported

--- a/settings/styles.css
+++ b/settings/styles.css
@@ -12,4 +12,7 @@ label {
   max-height: 12em;
   max-width: 100%;
   object-fit: contain;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
