Remove no longer needed content script

--- a/src/content.css
+++ b/src/content.css
@@ -1,3 +1,5 @@
+/* TODO: This is almost the same as page/styles.css, we should just use the one and modify the settings page accordingly */
+
 /* centers images in the middle of the page */
 .imageExtractCenterStyle {
   margin-left: auto;
