--- a/src/content.css
+++ b/src/content.css
@@ -1,57 +1,62 @@
+body {
+  margin: 0 !important;
+  padding: 0 !important;
+}
+
 /* centers images in the middle of the page */
 .imageExtractCenterStyle {
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  display: block !important;
 }
 
 /* full page navigation */
 #imageExtractUIContainer {
-  width: 100%;
-  background-color: lightyellow;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  flex-wrap: wrap;
-  position: relative;
+  width: 100% !important;
+  background-color: lightyellow !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  display: flex !important;
+  flex-direction: row !important;
+  justify-content: center !important;
+  flex-wrap: wrap !important;
+  position: relative !important;
 }
 
 /* each toggle + label container */
 .imageExtractUI {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: row;
-  position: relative;
+  margin: 0 !important;
+  padding: 0 !important;
+  display: flex !important;
+  flex-direction: row !important;
+  position: relative !important;
   padding-left: 5px
 }
 
 .imageExtractUI:nth-child(odd) {
-  background-color: #0000000f;
+  background-color: #0000000f !important;
 }
 
 /* align under the toggle button */
 .imageExtractLabel {
-  text-align: center;
-  font-family: sans-serif;
-  font-size: 14px;
-  color: black;
-  margin: auto;
-  padding: 10px;
-  padding-left: 2px;
-  position: relative;
+  text-align: center !important;
+  font-family: sans-serif !important;
+  font-size: 14px !important;
+  color: black !important;
+  margin: auto !important;
+  padding: 10px !important;
+  padding-left: 2px !important;
+  position: relative !important;
   padding-right: 5px
 }
 
 .imageExtractCheckbox {
-  text-align: center;
-  margin: auto;
-  padding: 0;
-  position: relative;
+  text-align: center !important;
+  margin: auto !important;
+  padding: 0 !important;
+  position: relative !important;
 }
 
 .hideImage {
-  display: none;
+  display: none !important;
 }
